<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            tools:context="sg.com.temasys.skylink.sdk.sampleapp.setting.SettingFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txt_room_setting_name"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_70dp"
            android:layout_marginLeft="@dimen/dp_10dp"
            android:gravity="center_vertical"
            android:text="@string/room_setting"
            android:textSize="@dimen/sp_16sp"/>

        <View
            android:id="@+id/div1"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_0_5dp"
            android:layout_marginLeft="@dimen/dp_10dp"
            android:layout_marginRight="@dimen/dp_10dp"
            android:background="@color/cardview_dark_background"/>


        <TextView
            android:id="@+id/txt_key_setting_name"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_70dp"
            android:layout_marginLeft="@dimen/dp_10dp"
            android:gravity="center_vertical"
            android:text="@string/key_setting"
            android:textSize="@dimen/sp_16sp"/>

        <View
            android:id="@+id/div2"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_0_5dp"
            android:layout_marginLeft="@dimen/dp_10dp"
            android:layout_marginRight="@dimen/dp_10dp"
            android:background="@color/cardview_dark_background"/>

        <LinearLayout
            android:id="@+id/layout_setting_audio_output"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_70dp"
            android:gravity="center_vertical"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txt_audio_output_setting_name"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="@dimen/dp_10dp"
                android:layout_weight="7"
                android:gravity="center_vertical"
                android:text="@string/default_audio_output"
                android:textSize="@dimen/sp_11sp"/>

            <RadioGroup
                android:id="@+id/rdGroupAudioOutput"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/audioHeadset"
                    android:layout_width="@dimen/dp_150dp"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="@dimen/dp_50dp"
                    android:text="@string/radio_headset"
                    android:textSize="@dimen/sp_12sp"/>

                <RadioButton
                    android:id="@+id/audioSpeaker"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/dp_20dp"
                    android:text="@string/radio_speaker"
                    android:textSize="@dimen/sp_12sp"/>
            </RadioGroup>

        </LinearLayout>

        <View
            android:id="@+id/div3"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_0_5dp"
            android:layout_marginLeft="@dimen/dp_10dp"
            android:layout_marginRight="@dimen/dp_10dp"
            android:background="@color/cardview_dark_background"/>

        <LinearLayout
            android:id="@+id/layout_setting_video_output"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_70dp"
            android:gravity="center_vertical"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txt_video_output_setting_name"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="@dimen/dp_10dp"
                android:layout_weight="7"
                android:gravity="center_vertical"
                android:text="@string/default_video_output"
                android:textSize="@dimen/sp_11sp"/>

            <RadioGroup
                android:id="@+id/rdGroupVideoOutput"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/videoHeadset"
                    android:layout_width="@dimen/dp_150dp"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="@dimen/dp_50dp"
                    android:text="@string/radio_headset"
                    android:textSize="@dimen/sp_12sp"/>

                <RadioButton
                    android:id="@+id/videoSpeaker"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/dp_20dp"
                    android:text="@string/radio_speaker"
                    android:textSize="@dimen/sp_12sp"/>
            </RadioGroup>

        </LinearLayout>

        <View
            android:id="@+id/div4"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_0_5dp"
            android:layout_marginLeft="@dimen/dp_10dp"
            android:layout_marginRight="@dimen/dp_10dp"
            android:background="@color/cardview_dark_background"/>

        <LinearLayout
            android:id="@+id/layout_setting_camera_output"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txt_camera_output_setting_name"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="@dimen/dp_10dp"
                android:layout_weight="7"
                android:gravity="center_vertical"
                android:text="@string/default_camera_output"
                android:textSize="@dimen/sp_11sp"/>

            <RadioGroup
                android:id="@+id/rdGroupVideoDevice"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="3"
                android:orientation="vertical">

                <RadioButton
                    android:id="@+id/camera_front"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="@dimen/dp_50dp"
                    android:text="@string/camera_front"
                    android:textSize="@dimen/sp_12sp"/>

                <RadioButton
                    android:id="@+id/camera_back"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="@dimen/dp_50dp"
                    android:text="@string/camera_back"
                    android:textSize="@dimen/sp_12sp"/>

                <RadioButton
                    android:id="@+id/screen_device"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="@dimen/dp_50dp"
                    android:text="@string/screen_device"
                    android:textSize="@dimen/sp_12sp"/>

                <RadioButton
                    android:id="@+id/camera_custom"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="@dimen/dp_50dp"
                    android:text="@string/camera_custom"
                    android:textSize="@dimen/sp_12sp"/>
                <RadioButton
                    android:id="@+id/camera_none"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="@dimen/dp_50dp"
                    android:text="@string/no_camera"
                    android:textSize="@dimen/sp_12sp"/>

            </RadioGroup>

        </LinearLayout>

        <View
            android:id="@+id/div5"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_0_5dp"
            android:layout_marginLeft="@dimen/dp_10dp"
            android:layout_marginRight="@dimen/dp_10dp"
            android:background="@color/cardview_dark_background"/>

        <LinearLayout
            android:id="@+id/layout_setting_video_resolution"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_3dp"
            android:gravity="center_vertical"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txt_video_res_setting_name"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="@dimen/dp_10dp"
                android:layout_weight="7"
                android:gravity="center_vertical"
                android:text="@string/default_video_resolution"
                android:textSize="@dimen/sp_11sp"/>

            <RadioGroup
                android:id="@+id/rdGroupVideoResolution"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:orientation="vertical">

                <RadioButton
                    android:id="@+id/rd_video_res_VGA"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="@dimen/dp_50dp"
                    android:text="@string/video_res_VGA"
                    android:textSize="@dimen/sp_12sp"/>

                <RadioButton
                    android:id="@+id/rd_video_res_HDR"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="@dimen/dp_50dp"
                    android:text="@string/video_res_HDR"
                    android:textSize="@dimen/sp_12sp"/>

                <RadioButton
                    android:id="@+id/rd_video_res_FHD"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="@dimen/dp_50dp"
                    android:text="@string/video_res_FHD"
                    android:textSize="@dimen/sp_12sp"/>
            </RadioGroup>

        </LinearLayout>
    </LinearLayout>
</ScrollView>
