<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/banner_height"
        android:background="@android:color/white">

        <ImageView
            android:id="@+id/imgBanner"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/banner4"/>

        <ImageView
            android:id="@+id/imgLogo"
            android:layout_width="@dimen/dp_80dp"
            android:layout_height="@dimen/dp_40dp"
            android:layout_margin="@dimen/dp_10dp"
            android:background="@color/color_black"
            android:src="@drawable/ic_temasys_logo_icon"
            android:visibility="gone"/>

    </FrameLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/main_gray">

        <LinearLayout
            android:id="@+id/contentContainer"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal">

            <GridLayout
                android:id="@+id/gridContent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_30dp"
                android:columnCount="2">

                <LinearLayout
                    android:id="@+id/audioContainerBig"
                    style="@style/CustonmButton"
                    android:layout_width="@dimen/dp_150dp"
                    android:layout_height="@dimen/dp_80dp"
                    android:layout_margin="@dimen/dp_10dp">

                    <RelativeLayout
                        android:id="@+id/audioContainer"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <ImageButton
                            android:id="@+id/btnAudioCall"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@android:color/transparent"
                            android:gravity="center_vertical"
                            android:src="@drawable/ic_audio_icon"/>

                        <TextView
                            android:id="@+id/tvAudio"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_below="@id/btnAudioCall"
                            android:gravity="center_horizontal"
                            android:text="@string/audio"/>
                    </RelativeLayout>

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/screenShareContainerBig"
                    style="@style/CustonmButton"
                    android:layout_width="@dimen/dp_150dp"
                    android:layout_height="@dimen/dp_80dp"
                    android:layout_margin="@dimen/dp_10dp">

                    <RelativeLayout
                        android:id="@+id/screenShareContainer"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <ImageButton
                            android:id="@+id/btnScreenShare"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@android:color/transparent"
                            android:gravity="center_vertical"
                            android:src="@drawable/ic_video_icon"/>

                        <TextView
                            android:id="@+id/tvsSreenShare"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_below="@id/btnScreenShare"
                            android:gravity="center_horizontal"
                            android:text="@string/video"/>

                    </RelativeLayout>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/chatContainerBig"
                    style="@style/CustonmButton"
                    android:layout_width="@dimen/dp_150dp"
                    android:layout_height="@dimen/dp_80dp"
                    android:layout_margin="@dimen/dp_10dp">

                    <RelativeLayout
                        android:id="@+id/chatContainer"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <ImageButton
                            android:id="@+id/btnChat"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@android:color/transparent"
                            android:gravity="center_vertical"
                            android:src="@drawable/ic_chat_icon"/>

                        <TextView
                            android:id="@+id/tvChat"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_below="@id/btnChat"
                            android:gravity="center_horizontal"
                            android:text="@string/chat"/>

                    </RelativeLayout>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/fileContainerBig"
                    style="@style/CustonmButton"
                    android:layout_width="@dimen/dp_150dp"
                    android:layout_height="@dimen/dp_80dp"
                    android:layout_margin="@dimen/dp_10dp">

                    <RelativeLayout
                        android:id="@+id/fileContainer"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <ImageButton
                            android:id="@+id/btnFileTransfer"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@android:color/transparent"
                            android:gravity="center_vertical"
                            android:src="@drawable/ic_file_transfer_icon"/>

                        <TextView
                            android:id="@+id/tvFileTransfer"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_below="@id/btnFileTransfer"
                            android:gravity="center_horizontal"
                            android:text="@string/fileTransfer"/>

                    </RelativeLayout>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/dataContainerBig"
                    style="@style/CustonmButton"
                    android:layout_width="@dimen/dp_150dp"
                    android:layout_height="@dimen/dp_80dp"
                    android:layout_margin="@dimen/dp_10dp">

                    <RelativeLayout
                        android:id="@+id/dataContainer"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <ImageButton
                            android:id="@+id/btnDataTransfer"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@android:color/transparent"
                            android:gravity="center_vertical"
                            android:src="@drawable/ic_data_transfer_icon"/>

                        <TextView
                            android:id="@+id/tvDataTransfer"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_below="@id/btnDataTransfer"
                            android:gravity="center_horizontal"
                            android:text="@string/dataTransfer"/>

                    </RelativeLayout>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/multiVideoContainerBig"
                    style="@style/CustonmButton"
                    android:layout_width="@dimen/dp_150dp"
                    android:layout_height="@dimen/dp_80dp"
                    android:layout_margin="@dimen/dp_10dp">

                    <RelativeLayout
                        android:id="@+id/multiVideoContainer"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <ImageButton
                            android:id="@+id/btnMultiVideoCall"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@android:color/transparent"
                            android:gravity="center_vertical"
                            android:src="@drawable/ic_multi_video_call_icon"/>

                        <TextView
                            android:id="@+id/tvMultiVideoCall"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_below="@id/btnMultiVideoCall"
                            android:gravity="center_horizontal"
                            android:text="@string/multiVideo"/>

                    </RelativeLayout>
                </LinearLayout>
            </GridLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>
